# rosbag-parser

./: CMakeLists.txt  README.md  package.xml
src/: parser.cpp
